<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".OverviewActivity">

    <TextView android:text="@string/my_nanodegree_apps"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:id="@+id/tv_my_ndegree_apps"
        android:textStyle="bold"
        android:textSize="21sp"
        android:gravity="center_vertical|center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_spotify_streamer"
        android:id="@+id/button_spotify_streamer"
        android:layout_gravity="center_horizontal"
        android:onClick="showToast"
        android:textSize="19sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_scores_app"
        android:id="@+id/button_scores_app"
        android:layout_gravity="center_horizontal"
        android:onClick="showToast"
        android:textSize="19sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_library_app"
        android:id="@+id/button_library_app"
        android:onClick="showToast"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_build_it_bigger"
        android:id="@+id/button_build_it_bigger"
        android:onClick="showToast"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_xyz_reader"
        android:id="@+id/button_xyz_reader"
        android:onClick="showToast"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:textColor="@android:color/holo_orange_light" />

    <Button
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0px"
        android:text="@string/btn_capstone_my_own_app"
        android:id="@+id/button_capstone_my_own_app"
        android:onClick="showToast"
        android:layout_gravity="center_horizontal"
        android:textSize="19sp"
        android:background="@android:color/holo_orange_light"
        android:textColor="#525153" />

</LinearLayout>
